# GLFW_Window

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GLFW_Window  Makefile  cmake_install.cmake  main.cpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: main.cpp
